<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/listFragment">

    <fragment
        android:id="@+id/listFragment"
        android:name="com.example.nativo.ListFragment"
        android:label="@string/list_fragment_label"
        tools:layout="@layout/fragment_list" >
        <action
            android:id="@+id/action_listFragment_to_detailFragment"
            app:destination="@id/detailFragment" />
        <action
            android:id="@+id/action_listFragment_to_ibgeFragment" 
            app:destination="@id/ibgeFragment" />
    </fragment>
    <fragment
        android:id="@+id/detailFragment"
        android:name="com.example.nativo.DetailFragment"
        android:label="@string/detail_fragment_label"
        tools:layout="@layout/fragment_detail" >
        <argument
            android:name="selectedItem"
            app:argType="com.example.nativo.Item" />
    </fragment>

    <fragment
        android:id="@+id/ibgeFragment"
        android:name="com.example.nativo.IbgeFragment"
        android:label="@string/ibge_fragment_label"
        tools:layout="@layout/fragment_ibge"/>

</navigation>